--- a/eTools Ultimate/Views/Pages/DashboardPage.xaml
+++ b/eTools Ultimate/Views/Pages/DashboardPage.xaml
@@ -28,7 +28,6 @@
             <Border
                 Height="160"
                 Margin="8"
-                Background="#2D2D2D"
                 CornerRadius="12"
                 Cursor="Hand"
                 Tag="{Binding}">
@@ -39,9 +38,12 @@
                 </Border.Width>
                 <Border.Style>
                     <Style TargetType="Border">
+                        <Setter Property="Background" Value="{DynamicResource ControlFillColorDefaultBrush}" />
+                        <Setter Property="BorderBrush" Value="{DynamicResource ControlStrokeColorDefaultBrush}" />
+                        <Setter Property="BorderThickness" Value="1" />
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="#3D3D3D" />
+                                <Setter Property="Background" Value="{DynamicResource ControlFillColorSecondaryBrush}" />
                                 <Setter Property="BorderBrush">
                                     <Setter.Value>
                                         <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
@@ -50,7 +52,7 @@
                                         </LinearGradientBrush>
                                     </Setter.Value>
                                 </Setter>
-                                <Setter Property="BorderThickness" Value="1" />
+                                <Setter Property="BorderThickness" Value="2" />
                             </Trigger>
                         </Style.Triggers>
                     </Style>
@@ -93,7 +95,7 @@
                         VerticalAlignment="Top"
                         FontSize="18"
                         FontWeight="SemiBold"
-                        Foreground="#FFFFFF"
+                        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
                         Text="{Binding Title}" />
 
                     <!--  Description below title  -->
@@ -103,7 +105,7 @@
                         HorizontalAlignment="Center"
                         VerticalAlignment="Top"
                         FontSize="14"
-                        Foreground="#CCCCCC"
+                        Foreground="{DynamicResource TextFillColorSecondaryBrush}"
                         Text="{Binding Description}"
                         TextAlignment="Center"
                         TextOptions.TextFormattingMode="Display"
@@ -167,7 +169,7 @@
                                 FontSize="32"
                                 FontTypography="Title"
                                 FontWeight="Bold"
-                                Foreground="#FFFFFF"
+                                Foreground="{DynamicResource TextFillColorPrimaryBrush}"
                                 Text="{i18n:StringLocalizer 'Welcome'}" />
                         </StackPanel>
 
@@ -177,7 +179,7 @@
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Bottom"
                                 FontTypography="Caption"
-                                Foreground="#FFFFFF"
+                                Foreground="{DynamicResource TextFillColorPrimaryBrush}"
                                 Text="{i18n:StringLocalizer 'Created by eTools Ultimate'}" />
 
                             <Button
@@ -210,24 +212,23 @@
                                     Margin="12"
                                     HorizontalAlignment="Left"
                                     VerticalAlignment="Bottom"
-                                    Background="#2D2D2D"
-                                    BorderBrush="Transparent"
+                                    Background="{DynamicResource ControlFillColorDefaultBrush}"
+                                    BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
                                     BorderThickness="1"
                                     CornerRadius="8"
                                     Cursor="Hand">
                                     <Border.Effect>
                                         <DropShadowEffect
-                                            BlurRadius="10"
+                                            BlurRadius="8"
                                             Direction="270"
-                                            Opacity="0.3"
-                                            ShadowDepth="2"
-                                            Color="Black" />
+                                            Opacity="0.2"
+                                            ShadowDepth="1" />
                                     </Border.Effect>
                                     <Border.Style>
                                         <Style TargetType="Border">
                                             <Style.Triggers>
                                                 <Trigger Property="IsMouseOver" Value="True">
-                                                    <Setter Property="Background" Value="#3D3D3D" />
+                                                    <Setter Property="Background" Value="{DynamicResource ControlFillColorSecondaryBrush}" />
                                                     <Setter Property="BorderBrush">
                                                         <Setter.Value>
                                                             <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
@@ -236,7 +237,7 @@
                                                             </LinearGradientBrush>
                                                         </Setter.Value>
                                                     </Setter>
-                                                    <Setter Property="BorderThickness" Value="1" />
+                                                    <Setter Property="BorderThickness" Value="2" />
                                                 </Trigger>
                                             </Style.Triggers>
                                         </Style>
@@ -246,7 +247,7 @@
                                         HorizontalAlignment="Center"
                                         VerticalAlignment="Center"
                                         FontSize="12"
-                                        Foreground="#FFFFFF"
+                                        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
                                         Text="{i18n:StringLocalizer 'Patchlogs'}" />
                                 </Border>
                             </Button>
