Motions page hide right side if no selection

--- a/eTools Ultimate/Views/Pages/MotionsPage.xaml
+++ b/eTools Ultimate/Views/Pages/MotionsPage.xaml
@@ -394,6 +394,15 @@
 
             <!--  Right Side - Form  -->
             <Grid Grid.Column="2">
+                <Grid.Style>
+                    <Style TargetType="Grid">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding MotionsView.CurrentItem}" Value="{x:Null}">
+                                <Setter Property="Visibility" Value="Collapsed" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Grid.Style>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
